Fixed drag selection starting when clicking on scrollbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    user-select: none;
 
     table {
         width: 100%;
@@ -27,7 +28,6 @@
 
     td, th {
         overflow: hidden;
-        user-select: none;
     }
 
     tbody tr {
@@ -43,10 +43,8 @@
             background-color: #c4d9b1;
         }
 
-        &:first-child {
-            td, th {
-                border-top: none;
-            }
+        &:first-child td, &:first-child th {
+            border-top: none;
         }
     }
 
@@ -57,51 +55,47 @@
         pointer-events: none;
       }
 
-    .header {
-        &[data-resizing=true] .column {
-            cursor: col-resize !important;
+      .column {
+        position: relative;
+        border-left: 1px solid transparent;
+
+        &[data-sortable=true] {
+            cursor: pointer;
         }
 
-        .column {
-            position: relative;
-            border-left: 1px solid transparent;
-
-            &[data-sortable=true] {
-                cursor: pointer;
-            }
-
-            &:first-child > .seperator {
-                display: none;     
-            }
-        }
-
-        .sortIcon {
-            height: 1.25em;
-            margin-left: 0.25rem;
-
-            &[data-order=desc] {
-                transform: rotate(180deg);
-            }
-        }
-
-        .title {
-            font-weight: bold;
-            white-space: nowrap;
-        }
-
-        .seperator {
-            position: absolute;
-            left: 0;
-            top: 0;        
-            width: 6px;
-            height: 100%;
-            cursor: col-resize;
-
-            &:active {
-                border-left: 1px dotted black;
-            }
+        &:first-child > .seperator {
+            display: none;     
         }
     }
 
+    .sortIcon {
+        height: 1.25em;
+        margin-left: 0.25rem;
 
+        &[data-order=desc] {
+            transform: rotate(180deg);
+        }
+    }
+
+    .title {
+        font-weight: bold;
+        white-space: nowrap;
+    }
+
+    .seperator {
+        position: absolute;
+        left: 0;
+        top: 0;        
+        width: 6px;
+        height: 100%;
+        cursor: col-resize;
+
+        &:active {
+            border-left: 1px dotted black;
+        }
+    }
+
+    .header[data-resizing=true] .column {
+        cursor: col-resize !important;
+    }
 }
